fix: boot erased